inserite modifiche barra login del ticket refs #20462, fix menu che fa overflow quando è l’ultimo elemento: tolto left: -1, sostituito con margin-left

--- a/styles/unibo/u_barra_login.scss
+++ b/styles/unibo/u_barra_login.scss
@@ -3,6 +3,12 @@
   color: color-pick-contrast($barra-login-background, (#fff, $base-font-color));
   line-height: 32px;
   padding: 0px;
+  &:after{
+    content: "";
+    display: table;
+    clear: both;
+    width: 100%;
+  }
 
   a {
     color: color-pick-contrast($barra-login-background, (#fff, $base-font-color));
@@ -58,6 +64,31 @@
     &[role="menubar"] {
       opacity: 1;
       overflow: visible;
+      &.vertical {
+        > li {
+          .is-dropdown-submenu {
+            &.vertical {
+                margin-left: -1px;
+            }
+          }
+        }
+        .is-active {
+        background-color: $white;
+          a {
+            color: $light-black;
+
+            &::after {
+              border-color: $light-black transparent transparent;
+            }
+          }
+          &:hover {
+            background-color: $white;
+            a {
+                color: $light-black;
+            }
+          }
+        }
+      }
     }
     
     > li {
